--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,13 @@ php:
   - 7.1
   - 7.2
   - hhvm
+  - nightly
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: hhvm
+    - php: nightly
 
 before_script:
   - composer install --no-interaction
