--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     }
   ],
   "require": {
-    "php": ">=5.6"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~5",
+    "php": ">=5.6",
     "guzzlehttp/guzzle": "~6.3",
     "myclabs/php-enum": "~1.6"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~5"
   },
   "autoload": {
     "psr-4": {
